<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_mins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/min"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="viewEnd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="91dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/split"
            android:textColor="#F2000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/sec"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Start"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/start" />

        <Button
            android:id="@+id/btn_stop"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/stop" />
    </LinearLayout>
</LinearLayout>
